@@ -1,6 +1,11 @@
 Development Portal (2014-08-21 shi)
 ==============================
 Widget system
+SAVi documentation
+Customisation documentation
+Generator documentation
+Translation documentation
+Fixed paddings and widths for titles and activities list table
 
 
 Development Portal (2014-08-20 shi)
